--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "electron": "31.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.3.3"
